# openai_conversation_plus

./: .editorconfig  .pythonrc  README.md  hacs.json  pyproject.toml  ruff.toml
.github/workflows/: release.yml  validate.yaml
custom_components/openai_conversation_plus/: __init__.py  config_flow.py  const.py  conversation.py  manifest.json  memory.py  services.yaml  strings.json
custom_components/openai_conversation_plus/translations/: en.json
